...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark_Gray_Background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/habit_title"
        android:layout_width="149dp"
        android:layout_height="43dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/rounded_corners_user_input"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saturday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <Button
        android:id="@+id/monday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato"
        android:gravity="center"
...
        android:hint="YYYY"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/Lighter_Gray_Text"
        android:textColorHint="@color/Lighter_Gray_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_date"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"></TextView>

    <TextView
        android:id="@+id/textView22"
...
        android:hint="YYYY"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/Lighter_Gray_Text"
        android:textColorHint="@color/Lighter_Gray_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_date"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"></TextView>

    <ImageButton
        android:id="@+id/end_date"
...
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <EditText
        android:id="@+id/habit_reason"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/rounded_corners_user_input"
        android:fontFamily="@font/lato"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/confirm"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="323dp"
        android:layout_marginBottom="158dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_done"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Dark_Gray_Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <ImageButton
        android:id="@+id/addHabitEventButton2"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        android:foregroundTint="@color/Lighter_Gray_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
