...
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/noPhotoFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addHabitEventButton"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Medium_Gray_Background"
        android:src="@drawable/ic_done"
...
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/habit_event_title"
        app:layout_constraintEnd_toStartOf="@+id/habit_event_title"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/Medium_Gray_Background"
        android:src="@drawable/ic_baseline_travel_explore_24"
        app:layout_constraintBottom_toTopOf="@+id/location_edit_text"
...
